# bettingsmall

./: .env.template  .eosproj  README.md  cryptoship.abi  cryptoship.wasm  package-lock.json  package.json
actions/: attack.js  create.js  decommit.js  join.js  reveal.js
contract/: CMakeLists.txt  bettingsmall.cpp  bettingsmall.hpp  bettingsmall.init_rc.md  bettingsmall_rc.md
contract/cleanup/: cleanup.cpp
contract/fsm/: fsm.cpp  fsm.hpp
contract/logic/: board.hpp
contract/utils/: utils.cpp  utils.hpp
scripts/create_actions/: index.js
tests/: example_game.test.js
